# Todo_list_em_django

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: django_ci.yml
apps/todo/: tests.py
setup/: settings.py  urls.py
static/css/: layout.css
templates/: layout.html
todo/: urls.py
todo/templates/todo/: home.html
