[project]
name = "todo-list"
version = "0.1.0"
description = "Todo list web app created with django framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.23",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 120

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "setup.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
