[project]
name = "todo_list_Django"
version = "0.1.0"
description = "Todo list web app created with django framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.23",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 120

[tool.taskipy.tasks]
#Ruff tasks
lint = "ruff check ."
format = "ruff format ."

#Django tasks
runserver = "uv run python3 manage.py runserver"
migrate = "uv run python3 manage.py migrate"
makemigrations = "uv run python3 manage.py makemigrations"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "setup.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
